src/objects/App_Log__x.object
<CustomObject>
    <description>App_Log</description>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>uat$App_Log</externalName>
    <fields>
        <fullName>artifact__c</fullName>
        <description>artifact</description>
        <externalDeveloperName>artifact</externalDeveloperName>
        <label>artifact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created__c</fullName>
        <description>created</description>
        <externalDeveloperName>created</externalDeveloperName>
        <label>created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>level__c</fullName>
        <description>level</description>
        <externalDeveloperName>level</externalDeveloperName>
        <label>level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <description>message</description>
        <externalDeveloperName>message</externalDeveloperName>
        <label>message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>method__c</fullName>
        <description>method</description>
        <externalDeveloperName>method</externalDeveloperName>
        <label>method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <description>title</description>
        <externalDeveloperName>title</externalDeveloperName>
        <label>title</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <description>type</description>
        <externalDeveloperName>type</externalDeveloperName>
        <label>type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>App_Log</label>
    <pluralLabel>App_Log</pluralLabel>
</CustomObject>